--- a/view/ProductDetails.view.xml
+++ b/view/ProductDetails.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="dmitry.babichev.controller.StoreDetails"
+<mvc:View controllerName="dmitry.babichev.controller.ProductDetails"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
 	xmlns:f="sap.f"
