--- a/view/ProductsOverview.view.xml
+++ b/view/ProductsOverview.view.xml
@@ -5,7 +5,7 @@
 	xmlns:fb="sap.ui.comp.filterbar"
 	xmlns:layout="sap.ui.layout"
 	xmlns:core="sap.ui.core" height="100%">
-	<f:DynamicPage>
+	<f:DynamicPage class="sapUiNoContentPadding">
 
 		<!-- ProductsOverview Title -->
 		<f:title>
